--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ asyncio_default_fixture_loop_scope = "function"
 
 [project]
 name = "streamlit-firebase-auth"
-version = "1.0.2"
+version = "1.0.4"
 authors = [
     {name="Suzuki Shogo", email="suzuki.shogo@commondo.jp"},
 ]
@@ -21,6 +21,7 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 requires = [
+    "firebase-admin>=6.0.0"
 ]
 
 [project.urls]
